crk8s1/mongoservic.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: cr
spec:
  selector:
    app: mongo
  ports:
  - port: 27017
    targetPort: 27017
  type: ClusterIP
