crk8s1/redisservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: cr
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
  type: ClusterIP
