crk8s1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crm-ingress
  namespace: cr
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 3001

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
